# ai-agents

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  shell.nix
.github/workflows/: ci.yml
app/: config.py  dependencies.py  main.py
app/agents/: __init__.py  base.py  insight.py  insight_agent.py
app/agents/enhance/: __init__.py  agent.py  config.json  system.j2  user.j2
app/agents/insight/: __init__.py  agent.py
app/agents/insight/prompts/: system.j2  user.j2
app/agents/prompts/: __init__.py  insight.py
app/agents/prompts/insight/: system.j2  user.j2
app/api/v1/: routes.py
app/api/v1/endpoints/: agents.py  health.py  insight.py  routing.py
app/llm/: __init__.py  base.py  factory.py
app/llm/providers/: __init__.py  groq.py
app/schemas/: itinerary.py  location.py  preference.py  weather.py
app/services/: insight.py  weather.py
app/services/llm/: __init__.py  base.py  factory.py  utils.py
app/services/llm/providers/: __init__.py  groq.py  openai.py
docs/: project-structure.md  test-itineraries.json
tests/: conftest.py
tests/agents/: test_base.py  test_insight.py
tests/agents/insight/: test_agent.py
tests/api/v1/endpoints/: test_insight.py
tests/endpoints/: test_health.py  test_insight.py
tests/llm/: test_base.py
tests/llm/providers/: test_groq.py
tests/services/: test_groq_integration.py
tests/services/llm/: test_base.py
tests/services/llm/providers/: test_groq.py
